--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Projeto primeiros passos com html</title>
 </head>
 <body>
-    <h1>Projeto primeiros passsos com html.</h1>
+    <h1 id="inicio">Projeto primeiros passsos com html.</h1>
     <hr>
     <h2>Índice</h2>
     <ul>
@@ -17,6 +17,24 @@
         <li><a href="#">Criando tabelas utilizando HTML</a></li>
         <li><a href="#">Entendendo o HTML semântico</a></li>
     </ul>   
+
+    <h2>Introdução ao HTML na prática</h2> <a href="#inicio"><small>(voltar)</small></a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque voluptate odio libero impedit recusandae debitis fuga, dolorem praesentium quae tempore deleniti dolore deserunt officia doloremque! Reprehenderit harum at fuga magnam?</p>
+
+    <h2>Trabalhando com formulários em HTML</h2> <a href="#inicio"><small>(voltar)</small></a>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus porro voluptatum officia vitae placeat pariatur modi quasi aspernatur iusto illum voluptas, fugit nostrum, fuga necessitatibus id dolorum qui minus dolor?</p>
+
+    <h2>Estruturando seu HTML + Formatações</h2> <a href="#inicio"><small>(voltar)</small></a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque culpa aperiam perspiciatis eius vero voluptates sed! Rem quia ab ipsa aut accusantium temporibus, earum iure repudiandae quae amet a? Dolor?</p>
+
+    <h2>Trabalhando com  Mídias utilizando HTML</h2> <a href="#inicio"><small>(voltar)</small></a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ex explicabo est nemo rerum atque voluptates eaque delectus possimus adipisci corporis dolores inventore veniam ullam iste exercitationem ipsam, fuga accusantium!</p>
+
+    <h2>Criando tabelas utilizando HTML</h2> <a href="#inicio"><small>(voltar)</small></a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe et nulla cumque enim illo dolor doloribus, provident, ad tempora tenetur libero voluptatibus repudiandae est quia aperiam culpa ducimus, sed unde!</p>
+
+    <h2>Entendendo o HTML semântico</h2> <a href="#inicio"><small>(voltar)</small></a>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta distinctio quam voluptas architecto at est quis doloribus totam quo. Tempore quasi aliquid facilis ipsam est non impedit eaque eius illo.</p>
     
 </body>
 </html>
